# openreviewScraper

./: .gitignore  README.md  pyproject.toml
openreviewscraper/: main.py
