[tool.poetry]
name = "openreviewscraper"
version = "0.1.0"
description = ""
authors = ["hashiromer <hashiromer621@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.2"
requests = "^2.28.1"


[tool.poetry.scripts]
main = "openreviewscraper.main:run"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
